--- a/templates/employee/index.html.twig
+++ b/templates/employee/index.html.twig
@@ -2,8 +2,9 @@
 {% block body %}
 
     <h2 style="  margin-left: 10%;
-  margin-right: auto;">Employees. {{ c }} rows</h2>
-
+  margin-right: auto; display: inline;">Employees. {{ c }} rows</h2>
+    <a style="display: inline; float: right;margin-right: 20%;" class="btn btn-primary" href="/employees/new"
+       role="button">New</a>
     <table class="table table-striped" style="width:79%;margin-left: auto; margin-right: auto;">
         <thead>
         <tr>
