--- a/templates/pupil/index.html.twig
+++ b/templates/pupil/index.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h2 style="  margin-left: 10%;
+    <h2 style="  margin-left: 10%;display: inline;
   margin-right: auto;">Pupils. {{ c }} rows</h2>
-
+    <a style="display: inline; float: right;margin-right: 20%;" class="btn btn-primary" href="/pupils/new"
+       role="button">New</a>
     <table class="table table-striped" style="width:79%;margin-left: auto; margin-right: auto;">
         <thead>
 
