--- a/templates/activity/new.html.twig
+++ b/templates/activity/new.html.twig
@@ -2,20 +2,32 @@
 
 {% block body %}
 
-    <form style="width:40%; margin-left: auto; margin-right: auto; " class="form-group" action="/activities/new" method="post">
-        <label for="name">name</label>
-        <input type="text" name="name" class="form-control" required>
+    <form style="width:40%; margin-left: auto; margin-right: auto; " class="form-group" action="/activities/new"
+          method="post">
+        <div id="append">
+            <div class="form-row">
+                <div class="orm-group col-md-3">
+                    <label for="name">name</label>
+                    <input type="text" name="name[]" class="form-control" required>
+                </div>
+                <div class="orm-group col-md-3">
+                    <label for="starts_at">starts at</label>
+                    <input type="text" name="starts_at[]" class="form-control" required>
+                </div>
+                <div class="orm-group col-md-3">
+                    <label for="participants_number">participant number</label>
+                    <input type="text" name="participants_number[]" class="form-control">
+                </div>
+                <div class="orm-group col-md-3">
+                    <label for="seats_number">seat number</label>
+                    <input type="text" name="seats_number[]" class="form-control">
+                </div>
+            </div>
+        </div>
+        <div class="append-copy"></div>
 
-        <label for="starts_at">starts at</label>
-        <input type="text" name="starts_at" class="form-control" required>
+        <button type="button" name="add" class="btn btn-success append-btn">Add More</button>
 
-        <label for="participants_number">participants number</label>
-        <input type="text" name="participants_number" class="form-control">
-
-        <label for="seats_number">seats number</label>
-        <input type="text" name="seats_number" class="form-control">
-
-        <td><button type="button" name="add" id="add" class="btn btn-success">Add More</button></td>
 
         <input type="submit">
     </form>
