--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,10 @@
     {% block stylesheets %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script src="{{ asset('inc/main.js') }}"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+        <!-- Isolated Version of Bootstrap, not needed if your site already uses Bootstrap -->
+        <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -20,6 +24,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
                 crossorigin="anonymous"></script>
+
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 
     {% endblock %}
 
@@ -67,6 +74,9 @@
             <li style="float: left;display: inline;"><a
                         style="display: block;color: white;text-align: center;padding: 14px 16px;text-decoration: none;"
                         href="/organize">Organize</a></li>
+            <li style="float: left;display: inline;"><a
+                        style="display: block;color: white;text-align: center;padding: 14px 16px;text-decoration: none;"
+                        href="/reports">Reports</a></li>
         </ul>
     </nav>
 {% endblock %}
