--- a/templates/book/form.html.twig
+++ b/templates/book/form.html.twig
@@ -21,7 +21,7 @@
             <label for="user_id">User</label>
             <select name="user_id" class="custom-select mr-sm-2">
                 {% for user in users %}
-                <option value="{{ user.id }}">{{ user.id }} {{ user.name }} {{ user.surname }}</option>
+                <option value="{{ user.id }}">{{ user.id }} {{ user.name }} {{ user.surname }} {{ user.account_type }}</option>
                 {% endfor %}
                 <option value="">no owner - null</option>
             </select>
